--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mass-image-processor-pro",
+  "name": "ресайзы-для-баннеров-чг",
   "private": true,
   "version": "0.0.0",
   "type": "module",
